--- a/TestProject.WebAPI/TestProject.WebAPI.csproj
+++ b/TestProject.WebAPI/TestProject.WebAPI.csproj
@@ -6,6 +6,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>C:\Work\CodingTests\ZipPay\TestProject.WebAPI\TestProject.WebAPI.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
